--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>pratikkyal27@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -207,7 +207,7 @@
               <h4>Pratik Agarwal</h4>
               <p><em>Dedicated aspiring IT Enthusiast with a 2+ years of working experience for a reputed company. Deep knowledge about working on the large data sets and a good knowledge about SQL.</em></p>
               <ul>
-                <li>1260 E. University Drive, Hyve Appartments, Tempe, AZ</li>
+                <li>1216 E. Vista Del Cerro Drive, Tempe, AZ, 85281</li>
                 <li>+1 (602) 921-6348</li>
                 <li>pratikkyal27@gmail.com</li>
               </ul>
@@ -517,7 +517,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>1260 E. University Drive, Tempe, AZ 85281</p>
+                <p>1216 E. Vista Del Cerro Drive, Tempe, AZ, 85281</p>
               </div>
 
               <div class="email">
@@ -538,7 +538,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/meqweogp" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
