--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <img src="assets/img/pratikpic.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Pratik Agarwal</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/pratikkyal27" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/pratik.agarwal.378199" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/pratik_agarwal27/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
+          <a href="https://www.linkedin.com/in/pratikagarwal27/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -324,7 +324,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cloud">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/cool%20buddy.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Cool Buddy Assistant"><i>Open</i></a>
               </div>
@@ -433,10 +433,10 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Pratik's unwavering curiosity, exceptional technical skills, and ability to foster a positive work environment make him an invaluable asset, delivering outstanding results and leaving a lasting impression on both clients and colleagues.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/Abhinav%20sir.jpeg" class="testimonial-img" alt="">
                 <h3>Abhinav Gupta</h3>
                 <h4>Senior Project Manager</h4>
                 <h4>(Infosys Ltd.)</h4>
@@ -447,10 +447,10 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Pratik's quick learning and independent work, along with his dedication and support for others, made him a valuable and enjoyable team member to work with at the start of his career.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/harish%20sir.jpeg" class="testimonial-img" alt="">
                 <h3>Harish Kasarkod</h3>
                 <h4>Team Lead</h4>
                 <h4>(Infosys Ltd.)</h4>
@@ -461,13 +461,13 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Pratik Agarwal is proficient as a Web Developer and can build innovative designs which boost up the brand and increase customer satisfaction. He has a strong business intellect which eventually becomes the "ladder" to take the company to next level.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Satish Neelakantham</h3>
-                <h4>Program Manager</h4>
-                <h4>(Microsoft)</h4>
+                <img src="assets/img/testimonials/abhishek.jpeg" class="testimonial-img" alt="">
+                <h3>Abhishek Uniyal</h3>
+                <h4>Co-Founder</h4>
+                <h4>(FnPlus)</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -475,13 +475,13 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  A man with excellent leadership and communication skills. He has the ability to lead and drive digital world to increase growth targets and awareness and respect among customers. He is very passionate and visionary. He is experienced in developing the Websites.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Saurabh Jain</h3>
-                <h4>Software Engineer</h4>
-                <h4>(BridgeSGI Solutions)</h4>
+                <img src="assets/img/testimonials/som.jpeg" class="testimonial-img" alt="">
+                <h3>Somnath</h3>
+                <h4>Co-Founder</h4>
+                <h4>(FnPlus)</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -489,13 +489,13 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  I worked as a Partner with him and my experience was amazing. It is often said when Work becomes fun, one can achieve more and that's what exactly happened with me. I enjoyed my work and learnt a lot from him. Worth saying, an amazing leader, great motivator and an awesome person.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>Dhananjay Pandey</h3>
-                <h4>Senior Software Developer</h4>
-                <h4>(BridgeSGI Solutions)</h4>
+                <img src="assets/img/testimonials/saurabh.jpeg" class="testimonial-img" alt="">
+                <h3>Saurabh Jain</h3>
+                <h4>Software Engineer</h4>
+                <h4>(IDFC Bank)</h4>
               </div>
             </div><!-- End testimonial item -->
 
