--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                   Pratik's unwavering curiosity, exceptional technical skills, and ability to foster a positive work environment make him an invaluable asset, delivering outstanding results and leaving a lasting impression on both clients and colleagues.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/Abhinav%20sir.jpeg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/Abhinav%20Sir.jpeg" class="testimonial-img" alt="">
                 <h3>Abhinav Gupta</h3>
                 <h4>Senior Project Manager</h4>
                 <h4>(Infosys Ltd.)</h4>
